syntax = "proto3";

package apps.v1.repository.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/apps/v1/repository/v1";

message ProvisionRepositoryRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message ProvisionRepositoryResponse {
  string registry_id = 1;
  string repository_name = 2;
  string repository_arn = 3;
  string repository_uri = 4;
}
