syntax = "proto3";

package executors.v1.plan.v1;

import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/executors/v1/plan/v1";

message TerraformOutputs {
  string bucket = 1 [(validate.rules).string.min_len = 1];
  string job_prefix = 2 [(validate.rules).string.min_len = 1];
  string static_prefix = 3 [(validate.rules).string.min_len = 1];
}
